--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ textarea {
   
 .jumbotron {
   text-align: center;
-  background-color: rgb(111, 209, 226);
+  background-color: #77def5;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -23,6 +23,8 @@ textarea {
   
 .description {
   white-space: pre-wrap;
+  border-top: 1px solid #beb2b2;
+  border-bottom: 1px solid #beb2b2;
 }
 
 .time-block {
@@ -32,16 +34,19 @@ textarea {
   
 .row {
   white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;
+  height: 60px;
+  padding: 2px;
 }
   
 .hour {
-  background-color: #ffffff;
+  background-color: #e2d9d9;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border: 1.5px dashed #000000;
+  border-radius: 15px 0px 0px 15px;
+  border-color: black;
+  text-align: center;
 }
-  
+
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -58,17 +63,20 @@ textarea {
 }
   
 .saveBtn {
-  border-left: 1px solid black;
+  border: 1.5px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-  animation: shadowPulse 0.8s infinite;;
 }
   
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.fas {
+  animation: shadowPulse 1s infinite;
 }
 
 /* source: https://www.geekinsta.com/creating-a-pulse-effect-using-css/# */
