--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ textarea {
   border-radius: 15px 0px 0px 15px;
   border-color: black;
   text-align: center;
+  padding: 20px 15px 15px 15px;
 }
 
 .past {
